# FightingGameLang

./: .gitignore  CMakeLists.txt  helloworld.kai
include/: Compiler.h  Debug.h  Object.h  Scanner.h  Script.h  Stack.h  Value.h  VirtualMachine.h
src/: Compiler.cpp  Object.cpp  Scanner.cpp  Script.cpp  Stack.cpp  Value.cpp  VirtualMachine.cpp  main.cpp
